fix top positive & negative, css layout issues

--- a/src/routes/dashboard/summary/styles.scss
+++ b/src/routes/dashboard/summary/styles.scss
@@ -190,6 +190,23 @@
     padding: 28px;
   }
 
+  .section-participation-container {
+    display: flex;
+    width: 80%;
+    margin-bottom: 20px;
+  }
+
+  .section-participation-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    border-radius: 6px;
+    font-size: 11px;
+    height: 25px;
+    margin-right: 10px;
+  }
+
   .section-feedback {
     flex: 1;
     margin-right: 10px;
